--- a/index.html
+++ b/index.html
@@ -7,22 +7,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-  <h1 class="csm">CSM</h1>
-  <h2 class="fullname">Code School Mobile</h2>
-</header>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="courses.html">Courses</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<div class="container">
-  <h2>Welcome to Code School Mobile</h2>
-  <p>Your free learning hub for HTML, CSS, and future courses. Explore exercises and practice coding directly.</p>
-</div>
-<footer>
-  © 2025 Code School Mobile
-</footer>
+  <!-- Navbar -->
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#exercises">Exercises</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section id="hero" class="hero">
+    <h1 class="logo">CSM</h1>
+    <h2 class="subtitle">Code School Mobile</h2>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="about">
+    <h2>About Me</h2>
+    <p>Welcome to Code School Mobile! Here you can practice HTML, CSS, and more.</p>
+  </section>
+
+  <!-- Exercises -->
+  <section id="exercises" class="exercises">
+    <h2>Exercises</h2>
+    <ul>
+      <li><a href="exercise1.html">Exercise 1</a></li>
+      <li><a href="exercise2.html">Exercise 2</a></li>
+      <li><a href="exercise3.html">Exercise 3</a></li>
+      <li><a href="exercise4.html">Exercise 4</a></li>
+      <li><a href="exercise5.html">Exercise 5</a></li>
+      <li><a href="exercise6.html">Exercise 6</a></li>
+      <li><a href="exercise7.html">Exercise 7</a></li>
+      <li><a href="exercise8.html">Exercise 8</a></li>
+      <li><a href="exercise9.html">Exercise 9</a></li>
+      <li><a href="exercise10.html">Exercise 10</a></li>
+    </ul>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Code School Mobile</p>
+  </footer>
 </body>
 </html>
+
