--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- About -->
   <section id="about" class="about">
-    <h2>About Me</h2>
+    <h2>About CSM</h2>
     <p>Welcome to Code School Mobile! Here you can practice HTML, CSS, and more.</p>
   </section>
 
