--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section id="exercises" class="exercises">
     <h2>Exercises</h2>
     <ul>
-      <li><a href="exercise1.html">Exercise 1</a></li>
+      <li><a href="exercises/exercise1.html">Exercise1      </a></li>
       <li><a href="exercise2.html">Exercise 2</a></li>
       <li><a href="exercise3.html">Exercise 3</a></li>
       <li><a href="exercise4.html">Exercise 4</a></li>
