Add exercise2.html in exercises folder and update index link

--- a/exercises/exercise1.html
+++ b/exercises/exercise1.html
@@ -16,7 +16,7 @@
   </header>
 
   <section class="exercise">
-    <h2>Exercise 1: HTML Basics</h2>
+    <h2>Exercise 1</h2>
     
     <!-- Question in Urdu -->
     <p><strong>سوال:</strong></p>
