--- a/exercises/exercise2.html
+++ b/exercises/exercise2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 2 - Code School Mobile</title>
+  <title>Exercise 2 - Code School Mobile</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -20,15 +20,15 @@
     <h2>Exercise 2</h2>
     
     <!-- Question in Urdu -->
-    <p><strong>سوال:</strong></p>
-    <ol type="1">
+    <p><strong>سوال</strong></p>
+    <ul type="1">
       <li>ایک &lt;h1&gt; اپنا نام لکھیں۔</li>
       <li>ایک &lt;h2&gt; "میرا تعارف" لکھیں۔</li>
       <li>ایک پیراگراف اپنے بارے میں لکھیں۔</li>
       <li>&lt;hr&gt; شامل کریں۔</li>
       <li>ایک &lt;h2&gt; "میری پسندیدہ چیزیں" لکھیں۔</li>
       <li>ایک پیراگراف لکھیں اور &lt;br&gt; کے ساتھ اپنی 3 پسندیدہ چیزیں الگ الگ لائن میں دکھائیں۔</li>
-    </ol>
+    </ul>
 
     <h3>Answer:</h3>
     <pre>
