--- a/exercises/exercise3.html
+++ b/exercises/exercise3.html
@@ -11,7 +11,8 @@
     <nav>
       <ul>
         <li><a href="../index.html">🏠 Home</a></li>
-        <li><a href="exercise3.html">⬅ Prev</a></li>
+        <li><a href="exercise2.html">⬅ Prev</a></li>
+        <li><a href="exercise4.html">Next ➡</a></li>
       </ul>
     </nav>
   </header>
